chapter 2 till size versus quality

--- a/notes/chap2.ipynb
+++ b/notes/chap2.ipynb
@@ -33,6 +33,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Statistical bais refer to the  sampling error that are systematic that is produced by the measurement process(taking feedback from only the rich) or by bias error occuring through the sampling(feedback is taken from all but the sampling is done such that it contains on ly rich people)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random sampling error is also an error but there is no systematic pattern to it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Always try to prefer the quality data over the quantity data\n",
+    "\n",
+    "A true big data problem is like search engine of google where more queries(quiers are stored as a records) helps to give out better results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
