chapter 2 till quality vs quantity

--- a/notes/chap2.ipynb
+++ b/notes/chap2.ipynb
@@ -36,6 +36,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "    BIAS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Statistical bais refer to the  sampling error that are systematic that is produced by the measurement process(taking feedback from only the rich) or by bias error occuring through the sampling(feedback is taken from all but the sampling is done such that it contains on ly rich people)"
    ]
   },
@@ -44,6 +51,13 @@
    "metadata": {},
    "source": [
     "Random sampling error is also an error but there is no systematic pattern to it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "     Quality vs quantity "
    ]
   },
   {
