--- a/notes/chap1_EDA.ipynb
+++ b/notes/chap1_EDA.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,10 +9,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "             LOCATION ESTIMATATION USING MEAN .. TRIMMED MEAN AND MEDIAN "
+    "    LOCATION ESTIMATATION USING MEAN .. TRIMMED MEAN AND MEDIAN "
    ]
   },
   {
@@ -29,7 +31,7 @@
    "source": [
     "import pandas as pd\n",
     "import scipy.stats as sp\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -146,27 +148,27 @@
     "from  statsmodels import robust\n",
     "mad =robust.scale.mad(data['Population'])\n",
     "\n",
-    "print(f'standard devaition {std} is greater than median absolute deviation MAD {mad} and population iqr is {IQR}')\n",
+    "print(f'standard devaition {std} is greater than median absolute deviation MAD {mad} and population iqr is {IQR}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• Variance and standard deviation are the most widespread and routinely reported statistics of variability.\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "'''• Variance and standard deviation are the most widespread and routinely reported\n",
-    "statistics of variability.\n",
     "• Both are sensitive to outliers.\n",
-    "• More robust metrics include mean absolute deviation, median absolute deviation\n",
-    "from the median, and percentiles (quantiles)'''"
+    "\n",
+    "• More robust metrics include mean absolute deviation, median absolute deviation from the median, and percentiles (quantiles)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "      EXPLORING THE DATA DISTRIBUTION         "
+    "      EXPLORING THE DATA DISTRIBUTION  - CONTINIOUS     "
    ]
   },
   {
@@ -210,13 +212,13 @@
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x7f3e6cd3f2e0>,\n",
-       "  <matplotlib.lines.Line2D at 0x7f3e6cd3f430>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x7f3e6cd3f6d0>,\n",
-       "  <matplotlib.lines.Line2D at 0x7f3e6cd3f970>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x7f3e6cd3f040>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x7f3e6cd3fc10>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x7f3e6cd3feb0>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x7fd48f55aad0>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fd48f55ad70>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x7fd48f55b010>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fd48f55b2b0>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x7fd48f55a830>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x7fd48f55b550>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x7fd48f55b7f0>],\n",
        " 'means': []}"
       ]
      },
@@ -262,13 +264,13 @@
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x7f3e6cdadf60>,\n",
-       "  <matplotlib.lines.Line2D at 0x7f3e6ac617e0>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x7f3e6ac62e00>,\n",
-       "  <matplotlib.lines.Line2D at 0x7f3e6ac630a0>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x7f3e6ac62aa0>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x7f3e6ac63340>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x7f3e6ac635e0>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x7fd48d46ce20>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fd48d46e590>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x7fd48d46e830>,\n",
+       "  <matplotlib.lines.Line2D at 0x7fd48d46ead0>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x7fd48d46e170>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x7fd48d46ed70>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x7fd48d46f010>],\n",
        " 'means': []}"
       ]
      },
@@ -321,10 +323,10 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " \n",
     "\n",
     "                 FREQUENCY TABLE AND HISTOGRAM                "
    ]
@@ -423,11 +425,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The third and fourth moments are called skewness and kurtosis. Skewness refers to whether the data is skewed to larger or smaller values, and kurtosis indicates the propensity of the data to have extreme values metrics are not used to measure skewness and kurtosis;\n",
-    "instead, these are discovered through visual displays"
+    "- The third and fourth moments are called skewness and kurtosis. \n",
+    "\n",
+    "- Skewness refers to whether the data is skewed to larger or smaller values, and kurtosis indicates the propensity of the data to have extreme values metrics are not used to measure skewness and kurtosis;instead, these are discovered through visual displays"
    ]
   },
   {
@@ -438,10 +442,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Related to the histogram is a density plot, which shows the distribution of data values as a continuous line. A density plot can be thought of as a smoothed histogram,although it is typically computed directly from the data through a kernel density estimate"
+    "- Related to the histogram is a density plot, which shows the distribution of data values as a continuous line. \n",
+    "\n",
+    "- A density plot can be thought of as a smoothed histogram,although it is typically computed directly from the data through a kernel density estimate"
    ]
   },
   {
@@ -516,20 +523,30 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the total area under\n",
+    "The total area under\n",
     "the density curve = 1, and instead of counts in bins you calculate areas under the\n",
     "curve between any two points on the x-axis, which correspond to the proportion of\n",
     "the distribution lying between those two points"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "       Exploring Binary and Categorical Data"
+    "       EXPLORING BINARY AND CATEGORICAL DATA"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    BAR PLOT"
    ]
   },
   {
@@ -651,7 +668,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8106/2693461179.py:3: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "/tmp/ipykernel_5699/2693461179.py:3: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  corr=sp.corr()\n"
      ]
     },
@@ -772,7 +789,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PolyCollection at 0x7f3e666ea5c0>"
+       "<matplotlib.collections.PolyCollection at 0x7fd488eed390>"
       ]
      },
      "execution_count": 15,
@@ -815,10 +832,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "     Two Categorical Variables"
+    "     Two Categorical Variables (Categorical vs Categorical)"
    ]
   },
   {
@@ -837,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +961,7 @@
        "[450961 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1102,7 @@
        "G          0.126196  0.614008    0.198396  0.061401  0.007187"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,6 +1141,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Box Plot"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1134,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1169,7 @@
        "<AxesSubplot: title={'center': 'pct_carrier_delay'}, xlabel='airline'>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1165,15 +1191,26 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A violin plot,is an enhancement to the boxplot and plots the density estimate with the density on the y-axis. The density is mirrored and flipped over, and the resulting shape is filled in, creating an image resembling a violin. The advantage of a violin plot is that it can show nuances in the distribution that aren’t perceptible in a boxplot"
+    "    Violin Plot"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- A violin plot,is an enhancement to the boxplot and plots the density estimate with the density on the y-axis. \n",
+    "\n",
+    "- The density is mirrored and flipped over, and the resulting shape is filled in, creating an image resembling a violin. The advantage of a violin plot is that it can show nuances in the distribution that aren’t perceptible in a boxplot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1219,7 @@
        "<AxesSubplot: xlabel='airline', ylabel='pct_carrier_delay'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1233,16 +1270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f3e502602e0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fd488e92ef0>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1271,7 +1308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1285,12 +1322,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
